--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="image-container">
-        <img src="images/amber1.jpg" alt="Background Image" class="background-image">
+        <img src="amber1.jpg" alt="Background Image" class="background-image">
     </div>
 
     <script src="scripts.js"></script>
