--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="image-container">
-        <img src="images/amber2.jpg" alt="Background Image" class="background-image">
+        <img src="amber2.jpg" alt="Background Image" class="background-image">
     </div>
 
     <script src="scripts.js"></script>
