--- a/memories.html
+++ b/memories.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="image-container">
-        <img src="images/amber3.jpg" alt="Background Image" class="background-image">
+        <img src="amber3.jpg" alt="Background Image" class="background-image">
     </div>
 
     <script src="scripts.js"></script>
