--- a/special.html
+++ b/special.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="image-container">
-        <img src="images/amber4.jpg" alt="Background Image" class="background-image">
+        <img src="amber4.jpg" alt="Background Image" class="background-image">
     </div>
 
     <script src="scripts.js"></script>
